--- a/index.html
+++ b/index.html
@@ -1,58 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Thathang</title>
-<style>
-/* Basic Reset */
-* { box-sizing: border-box; margin:0; padding:0; }
-body { font-family: Arial, sans-serif; background:#f4f4f4; color:#333; line-height:1.6; }
-a { color:#007bff; text-decoration:none; }
-a:hover { text-decoration:underline; }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Thathang</title>
 
-/* Header */
-header { background: linear-gradient(90deg,#ff416c,#ff4b2b); color:#fff; padding:20px 0; text-align:center; }
-header h1 { font-size:2rem; }
+    <!-- Meta Tags for SEO -->
+    <meta name="description" content="Welcome to Thathang's corner of the internet. Explore creative projects, blog posts, shopping recommendations, and top mobile games.">
+    <meta name="keywords" content="Thathang, creative projects, blog, affiliate marketing, shopping, mobile games, recommendations">
+    <meta name="author" content="Thathang Huazel">
 
-/* Navigation */
-nav { background:#333; }
-nav ul { display:flex; list-style:none; justify-content:center; flex-wrap:wrap; }
-nav ul li { margin:0 15px; }
-nav ul li a { color:#fff; padding:10px; display:block; }
+    <!-- Open Graph Meta Tags for Social Sharing -->
+    <meta property="og:title" content="Thathang's Corner" />
+    <meta property="og:image" content="your_image_url_here.jpg" />
+    <meta property="og:description" content="Discover creative content, shopping recommendations, and mobile games. Join Thathang's corner of the internet!">
+    <meta property="og:url" content="https://www.yourwebsite.com" />
+    <meta property="og:type" content="website" />
 
-/* Hero Section */
-.hero { text-align:center; padding:50px 20px; background:#ffe5e0; border-radius:10px; }
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Thathang's Corner">
+    <meta name="twitter:description" content="Explore creative projects, blog posts, and top mobile game recommendations on Thathang's website.">
+    <meta name="twitter:image" content="your_image_url_here.jpg">
 
-/* Animated Text */
-.animated-text-container { text-align:center; margin:20px 0; font-size:1.5rem; color:#ff416c; font-weight:bold; overflow:hidden; white-space:nowrap; border-right:.15em solid #ff4b2b; width:fit-content; margin-left:auto; margin-right:auto; }
-@keyframes typing { from { width:0 } to { width:100% } }
-@keyframes blink { 50% { border-color: transparent } }
-.animated-text { display:inline-block; animation: typing 4s steps(50,end), blink .75s step-end infinite; white-space:nowrap; overflow:hidden; border-right:.15em solid #ff4b2b; }
+    <!-- Favicon -->
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
 
-/* Container */
-.container { max-width:1000px; margin:30px auto; padding:0 20px; }
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 
-/* Blog Post */
-.blog-post { background:#fff; padding:20px; margin-bottom:30px; border-radius:10px; box-shadow:0 0 10px rgba(0,0,0,0.1); }
-.blog-post h2 { color:#ff416c; margin-bottom:10px; }
-.blog-post p { margin-bottom:10px; }
+    <!-- Styles -->
+    <style>
+        /* Basic Reset */
+        * { box-sizing: border-box; margin:0; padding:0; }
+        body { font-family: 'Roboto', sans-serif; background:#f4f4f4; color:#333; line-height:1.6; }
+        a { color:#007bff; text-decoration:none; }
+        a:hover { text-decoration:underline; }
 
-/* Buttons */
-.affiliate-btn { display:inline-block; padding:10px 20px; background:#ff4b2b; color:#fff; border-radius:5px; text-decoration:none; margin:5px 5px 5px 0; }
-.affiliate-btn:hover { background:#ff416c; }
+        /* Header */
+        header { background: linear-gradient(90deg,#ff416c,#ff4b2b); color:#fff; padding:20px 0; text-align:center; }
+        header h1 { font-size:2rem; }
 
-/* Contact buttons */
-.contact-buttons a { margin:5px; display:inline-block; }
+        /* Navigation */
+        nav { background:#333; }
+        nav ul { display:flex; list-style:none; justify-content:center; flex-wrap:wrap; }
+        nav ul li { margin:0 15px; }
+        nav ul li a { color:#fff; padding:10px; display:block; }
 
-/* Footer */
-footer { background:#333; color:#fff; text-align:center; padding:15px 0; margin-top:30px; }
-</style>
+        /* Hero Section */
+        .hero { text-align:center; padding:50px 20px; background:#ffe5e0; border-radius:10px; }
+
+        /* Animated Text */
+        .animated-text-container { text-align:center; margin:20px 0; font-size:1.5rem; color:#ff416c; font-weight:bold; overflow:hidden; white-space:nowrap; border-right:.15em solid #ff4b2b; width:fit-content; margin-left:auto; margin-right:auto; }
+        @keyframes typing { from { width:0 } to { width:100% } }
+        @keyframes blink { 50% { border-color: transparent } }
+        .animated-text { display:inline-block; animation: typing 4s steps(50,end), blink .75s step-end infinite; white-space:nowrap; overflow:hidden; border-right:.15em solid #ff4b2b; }
+
+        /* Container */
+        .container { max-width:1000px; margin:30px auto; padding:0 20px; }
+
+        /* Blog Post */
+        .blog-post { background:#fff; padding:20px; margin-bottom:30px; border-radius:10px; box-shadow:0 0 10px rgba(0,0,0,0.1); }
+        .blog-post h2 { color:#ff416c; margin-bottom:10px; }
+        .blog-post p { margin-bottom:10px; }
+
+        /* Buttons */
+        .affiliate-btn { display:inline-block; padding:10px 20px; background:#ff4b2b; color:#fff; border-radius:5px; text-decoration:none; margin:5px 5px 5px 0; }
+        .affiliate-btn:hover { background:#ff416c; }
+
+        /* Contact buttons */
+        .contact-buttons a { margin:5px; display:inline-block; }
+
+        /* Footer */
+        footer { background:#333; color:#fff; text-align:center; padding:15px 0; margin-top:30px; }
+    </style>
 </head>
 <body>
 
 <header>
-    <h1> Thathang</h1>
+    <h1>Thathang</h1>
 </header>
 
 <nav>
@@ -85,10 +111,10 @@ footer { background:#333; color:#fff; text-align:center; padding:15px 0; margin-
             <h2>Top Shopping Apps for Android</h2>
             <p>Discover the best deals with these top shopping apps. Shop anytime, anywhere, and enjoy amazing discounts!</p>
             
-            <a class="affiliate-btn" href="https://www.amazon.in/?tag=Lunvalte20-21" target="_blank">🛒 Amazon</a>
-            <a class="affiliate-btn" href="https://linkredirect.in/visitretailer/2318?id=4635904&shareid=SraPkZJ&dl=https%3A%2F%2Fwww.flipkart.com%2F" target="_blank">📱 Flipkart</a>
-            <a class="affiliate-btn" href="https://myntr.it/UAJ76LG" target="_blank">👗 Myntra</a>
-            <a class="affiliate-btn" href="https://meesho.com/product/12345?aff_id=191025" target="_blank">👜 Meesho</a>
+            <a class="affiliate-btn" href="https://www.amazon.in/?tag=Lunvalte20-21" target="_blank" title="Shop on Amazon">🛒 Amazon</a>
+            <a class="affiliate-btn" href="https://linkredirect.in/visitretailer/2318?id=4635904&shareid=SraPkZJ&dl=https%3A%2F%2Fwww.flipkart.com%2F" target="_blank" title="Shop on Flipkart">📱 Flipkart</a>
+            <a class="affiliate-btn" href="https://myntr.it/UAJ76LG" target="_blank" title="Shop on Myntra">👗 Myntra</a>
+            <a class="affiliate-btn" href="https://meesho.com/product/12345?aff_id=191025" target="_blank" title="Shop on Meesho">👜 Meesho</a>
         </div>
 
     </section>
@@ -98,10 +124,10 @@ footer { background:#333; color:#fff; text-align:center; padding:15px 0; margin-
         <h2>Top Mobile Games</h2>
         <p>Check out these popular mobile games. Click below to download and enjoy!</p>
 
-        <a class="affiliate-btn" href="YOUR_AFFILIATE_LINK_HERE" target="_blank">PUBG Mobile</a>
-        <a class="affiliate-btn" href="YOUR_AFFILIATE_LINK_HERE" target="_blank">Call of Duty Mobile</a>
-        <a class="affiliate-btn" href="YOUR_AFFILIATE_LINK_HERE" target="_blank">Clash of Clans</a>
-        <a class="affiliate-btn" href="YOUR_AFFILIATE_LINK_HERE" target="_blank">Free Fire</a>
+        <a class="affiliate-btn" href="YOUR_AFFILIATE_LINK_HERE" target="_blank" title="Play PUBG Mobile">PUBG Mobile</a>
+        <a class="affiliate-btn" href="YOUR_AFFILIATE_LINK_HERE" target="_blank" title="Play Call of Duty Mobile">Call of Duty Mobile</a>
+        <a class="affiliate-btn" href="YOUR_AFFILIATE_LINK_HERE" target="_blank" title="Play Clash of Clans">Clash of Clans</a>
+        <a class="affiliate-btn" href="YOUR_AFFILIATE_LINK_HERE" target="_blank" title="Play Free Fire">Free Fire</a>
     </section>
 
     <!-- Contact Section -->
@@ -109,8 +135,8 @@ footer { background:#333; color:#fff; text-align:center; padding:15px 0; margin-
         <h2>Contact Us</h2>
         <p>Email: <a href="mailto:thanga135790@gmail.com">thanga135790@gmail.com</a></p>
         <div class="contact-buttons">
-            <a class="affiliate-btn" href="https://facebook.com/YOUR_PROFILE" target="_blank">Facebook</a>
-            <a class="affiliate-btn" href="https://instagram.com/YOUR_PROFILE" target="_blank">Instagram</a>
+            <a class="affiliate-btn" href="https://facebook.com/YOUR_PROFILE" target="_blank" title="Follow on Facebook">Facebook</a>
+            <a class="affiliate-btn" href="https://instagram.com/YOUR_PROFILE" target="_blank" title="Follow on Instagram">Instagram</a>
         </div>
     </section>
 
@@ -122,4 +148,3 @@ footer { background:#333; color:#fff; text-align:center; padding:15px 0; margin-
 
 </body>
 </html>
-
